
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Aug-2013 Jean-Marie Simonet
 # [#31659] Dropdown at frontend search. Thanks Tobias Zulauf
 # [#31350] Missing space in Calendar.
 # [#31676] *Isis: Filter drop-down items hidden by status bar
 # [#31661] Unclosed span tag in debug console. Thanks Constantin Romankiewicz

04-Aug-2013 Michael Babker
 # [#30834] Template errors when no CSS folder.  Thanks Rune Sjøen
 # [#31318] Bad display of images at Media Manager (IE/FF22).  Thanks Lu Nguyen
 # [#30445] mod_feed template error when displaying feed title.  Thanks Ben Eberle

04-Aug-2013 Jean-Marie Simonet
 # [#31382] Added min-width to (bootstrap) radio buttons to prettify settings. Thanks Peter van Westen
 # [#30027] Impossible to enter custom module position name if you have less than about 8 positions in the list. Thanks Sebastian Łuckoś
 # [#31354] To much clear lines at the Media Manager Options. Thanks Tobias Zulauf
 # [#31511] JRouter needs to take $uri by reference to properly pass it to rules. Thanks Klas

03-Aug-2013 Jean-Marie Simonet
 # [#31297] Content language manager missing drag drop ordering. Thanks Nguyen Huu Hien
 # [#27476] Menu types view not sorted alphabetically. Thanks Lao Neo
 # [#31586] Typo in model administrator/components/com_content/models/article.php. Thanks Volkmar Schlothauer and Brian Teeman
 # [#31536] Adding filters in backend Installation Discover view for 3.x. Thanks Gunjan Patel
 # [#31564] Missing images in sample data categories. Thanks Roland Dalmulder
 #$ [#30793] Spelling error in the title of the Edit Article Category screen
 #$ [#31357] Add the Default parameter to the colour options for the templates to the desc strings. Thanks Tobias Zulauf
 # [#31411] Show Offline image only if it exists. Thanks Tobias Zulauf
 # [#31360] The site is offline but anyhow the error page will show (e.g. at a 404 error). Thanks Mihail Irintchev