@@ -8,6 +8,7 @@ COM_JOOMLAUPDATE_CONFIG_CUSTOMURL_LABEL="Custom URL"
 COM_JOOMLAUPDATE_CONFIG_SOURCES_DESC="Configure where Joomla! gets its update information from"
 COM_JOOMLAUPDATE_CONFIG_SOURCES_LABEL="Update Source"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_CUSTOM="Custom URL"
+COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_CUSTOM_ERROR="The custom URL field is empty."
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_DESC="The update server Joomla! will use to find out if there is an update available"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_LABEL="Update server"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_LTS="Long Term Support (recommended)"
